--- a/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.html
+++ b/house.gov.by/99b1d104d7671b40d9435b5d82a4992a50cf3b80.html
@@ -353,6 +353,7 @@
     <div class="dep_block">
         <div class="fp_title minimized_block" onclick="open_block('bill_info', this, 'fp_title', 'drop_block', 'minimized_block');">Законопроекты, за подготовку которых отвечает депутат<span></span></div>
         <div class="hidden_block" id="bill_info" style="display:none">
+                            <a href="/ru/zakony-ru/view/o-vnesenii-izmenenij-i-dopolnenija-v-zakon-respubliki-belarus-o-privatizatsii-gosudarstvennogo-imuschestva-i-349/" title="«О внесении изменений и дополнения в Закон Республики Беларусь «О приватизации государственного имущества и преобразовании государственных унитарных предприятий в открытые акционерные общества»" class="fp_bills">«О внесении изменений и дополнения в Закон Республики Беларусь «О приватизации государственного имущества и преобразовании государственных унитарных предприятий в открытые акционерные общества»</a>
                             <a href="/ru/zakony-ru/view/o-nesostojatelnosti-i-bankrotstve-150/" title="«О несостоятельности и банкротстве»" class="fp_bills">«О несостоятельности и банкротстве»</a>
                     </div>  
     </div>    
