200 OK http://house.gov.by/ru/deputies-ru/view/vabischevich-petr-597/

--- a/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.html
+++ b/house.gov.by/c8a6466616738a8a82294445713e18edbfc9d9d2.html
@@ -316,8 +316,7 @@
 Национального собрания Республики Беларусь.</p> 
 <p>Награжден Почетной грамотой
 Национального собрания Республики Беларусь.</p> 
-<p>Женат, имеет сына и дочь.</p> 
-<p><br /></p>
+<p>Женат, имеет сына и дочь.</p>
         </div>    
     </div>
                 <div class="dep_block">
@@ -368,7 +367,7 @@
         
 <p><b>Контактный телефон в
 избирательном округе:<br /></b>(8-017) 745-55-68, <br />(+37529) 377-03-37 (Логойский р-н)<br />(+37529) 372-52-58 (Смолевичский р-н)</p> 
-<p><b>E-mail: <br /></b><a href="mailto:vabischevich.1963@mail.com">vabischevich.1963@mail.com</a></p>
+<p><b>E-mail: <br /></b><a href="mailto:vabischevich.1963@mail.com">vabischevich.1963@gmail.com</a></p>
     </div>
         <div class="right_col_block">
         <div class="rcb_title">Помощники</div>
