200 OK http://house.gov.by/ru/deputies-ru/view/schepov-vladislav-221/

--- a/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.html
+++ b/house.gov.by/89ff0502719991830a86af426f1d021d7bacf111.html
@@ -361,6 +361,7 @@
     <div class="dep_block">
         <div class="fp_title minimized_block" onclick="open_block('bill_info', this, 'fp_title', 'drop_block', 'minimized_block');">Законопроекты, за подготовку которых отвечает депутат<span></span></div>
         <div class="hidden_block" id="bill_info" style="display:none">
+                            <a href="/ru/zakony-ru/view/o-vnesenii-dopolnenij-i-izmenenija-v-zakon-respubliki-belarus-ob-investitsijax-354/" title="«О внесении дополнений и изменения в Закон Республики Беларусь «Об инвестициях»" class="fp_bills">«О внесении дополнений и изменения в Закон Республики Беларусь «Об инвестициях»</a>
                             <a href="/ru/zakony-ru/view/o-vnesenii-dopolnenija-i-izmenenij-v-zakon-respubliki-belarus-ob-imennyx-privatizatsionnyx-chekax-respubliki-55/" title="«О внесении дополнения и изменений в Закон Республики Беларусь «Об именных приватизационных чеках Республики Беларусь»" class="fp_bills">«О внесении дополнения и изменений в Закон Республики Беларусь «Об именных приватизационных чеках Республики Беларусь»</a>
                     </div>  
     </div>    
