200 OK http://house.gov.by/ru/deputies-ru/view/stativko-zhanna-545/

--- a/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.html
+++ b/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.html
@@ -373,6 +373,12 @@
                 
 <p><b>Контактный телефон:</b><br />(+37529) 608-08-88</p>                
             </div>
+                    <div class="news_item assistant">
+                <div class="assistant_title"><b>Андренко Владимир Александрович</b> </div>
+                
+<p><b>Постоянное рабочее место:<br /></b>г. Жабинка, ул. Кирова, д. 65, Жабинковский районный исполнительный комитет </p>
+<p><b>Контактный телефон:</b><br />(8-0164) 12-21-80</p>                
+            </div>
             </div>
                 <div class="right_col_block">
         <div class="rcb_title">Беловежский №&nbsp;8</div>
