--- a/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.html
+++ b/house.gov.by/6faca62c0613d3a29f1eeec515b433b3da10435f.html
@@ -350,6 +350,7 @@
     <div class="dep_block">
         <div class="fp_title minimized_block" onclick="open_block('bill_info', this, 'fp_title', 'drop_block', 'minimized_block');">Законопроекты, за подготовку которых отвечает депутат<span></span></div>
         <div class="hidden_block" id="bill_info" style="display:none">
+                            <a href="/ru/zakony-ru/view/o-vnesenii-izmenenij-i-dopolnenij-v-nekotorye-zakony-respubliki-belarus-po-voprosam-bezopasnosti-genno-369/" title="«О внесении изменений и дополнений в некоторые законы Республики Беларусь по вопросам безопасности генно-инженерной деятельности»" class="fp_bills">«О внесении изменений и дополнений в некоторые законы Республики Беларусь по вопросам безопасности генно-инженерной деятельности»</a>
                             <a href="/ru/zakony-ru/view/o-vnesenii-izmenenij-i-dopolnenij-v-zakon-respubliki-belarus-o-natsionalnoj-akademii-nauk-belarusi-325/" title="«О внесении изменений и дополнений в Закон Республики Беларусь «О Национальной академии наук Беларуси»" class="fp_bills">«О внесении изменений и дополнений в Закон Республики Беларусь «О Национальной академии наук Беларуси»</a>
                     </div>  
     </div>    
