--- a/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.html
+++ b/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.html
@@ -361,7 +361,7 @@
     <div class="dep_block">
         <div class="fp_title minimized_block" onclick="open_block('bill_info', this, 'fp_title', 'drop_block', 'minimized_block');">Законопроекты, за подготовку которых отвечает депутат<span></span></div>
         <div class="hidden_block" id="bill_info" style="display:none">
-                            <a href="/ru/zakony-ru/view/o-vnesenii-izmenenij-i-dopolnenija-v-nekotorye-zakony-respubliki-belarus-322/" title="«О внесении изменений и дополнения в некоторые законы Республики Беларусь»" class="fp_bills">«О внесении изменений и дополнения в некоторые законы Республики Беларусь»</a>
+                            <a href="/ru/zakony-ru/view/o-vnesenii-izmenenij-i-dopolnenija-v-nekotorye-zakony-respubliki-belarus-322/" title="«О внесении изменений и дополнений в некоторые законы Республики Беларусь»" class="fp_bills">«О внесении изменений и дополнений в некоторые законы Республики Беларусь»</a>
                     </div>  
     </div>    
         
